# doctor-front-api

./: README.md  data.json  db.sqlite3  manage.py  pyproject.toml
dashboard/: admin.py  models.py  serializers.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py
doctorGT/: asgi.py  settings.py  urls.py  wsgi.py
